cmake_minimum_required(VERSION 3.7)
project(semaphore)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
if (NOT MSVC)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pthread")
endif()
add_executable(tests semaphore.hpp semaphore.cpp tests.hpp tests.cpp main.cpp)
