cmake_minimum_required(VERSION 3.7)
project(semaphore)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
if (NOT MSVC)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pthread")
endif()
add_library(semaphore semaphore.hpp semaphore.cpp)
add_executable(tests tests.hpp tests.cpp main.cpp)
target_link_libraries(tests semaphore)
enable_testing()
add_test(NAME tests COMMAND $<TARGET_FILE:tests>)
